# ersap-jana

./: .gitignore  CMakeLists.txt  README.md  services.yaml  tridas.clara
data/src/main/cpp/: CMakeLists.txt  image_data_type.cpp  image_data_type.cpp.IGNORE  image_data_type.hpp  sampa_data_type.cpp  sampa_data_type.hpp
data/src/test/cpp/: CMakeLists.txt  sampa_serializer_tests.cc
docker/ubuntu_latest/: Dockerfile
legacy/src/main/cpp/: CMakeLists.txt  image.hpp  jana_engine.cpp  jana_engine.hpp  sampa_engine.cpp  sampa_engine.hpp
service/src/: CMakeLists.txt  clara_event_source.cpp  clara_event_source.hpp  group_event_processor.cpp  group_event_processor.hpp  jana_engine.cpp  jana_engine.hpp  jana_service.cpp  jana_service.hpp  sampa_event.hpp
services/clas12_ft_trigger/main/: CMakeLists.txt  InputDataFormat.hpp  OutputDataFormat.hpp  TriggerDecision_FTCalCluster_factory.cc  TriggerDecision_MinBias_factory.cc  TriggerDecision_MinBias_factory.h  ersap_event_processor.hpp  ersap_event_source.hpp  ft_trigger_service.cpp  ft_trigger_service.hpp
services/clas12_ft_trigger/main/DAQ/: fa250VTPMode7Hit.h  fa250VTPMode7Hit_factory.cc  faHit.h  faWaveboardHit.h  faWaveboardHit_factory.h
services/clas12_ft_trigger/main/FT/: FTCalCluster.cc  FTCalCluster.h  FTCalCluster_factory.cc  FTCalCluster_factory.h  FTCalCluster_factory_hdbscan.cc  FTCalCluster_factory_hdbscan.h  FTCalCluster_factory_km.cc  FTCalHit.cc  FTCalHit.h  FTCalHit_factory.cc  FTHodoHit.h  FTHodoHit_factory.cc
services/clas12_ft_trigger/main/FT/hdbscandir/: AllMetrics.cc  Hdb.cc  cluster.cc  cluster.h  hdbscan_main.cc
services/clas12_ft_trigger/main/FT/kmeans/: kmeans.cc  kmeans.h
services/clas12_ft_trigger/main/TT/: JFactoryGenerator_TT.h  TranslationTable.cc  TranslationTable.h
services/clas12_ft_trigger/main/Trigger/: TriggerDecision.h
services/ftcal_trigger_service/main/: CMakeLists.txt  InputDataFormat.cpp  InputDataFormat.hpp  OutputDataFormat.cpp  OutputDataFormat.hpp  TriggerDecision_FTCalCluster_factory.h  ersap_event_source.hpp  ft_cal_trigger_event_factory.cpp  ft_cal_trigger_event_factory.hpp  ftcal_trigger_service.cpp  ftcal_trigger_service.hpp
services/ftcal_trigger_service/main/DAQ/: TridasEvent.h  chronoTypeDef.h  fa250VTPMode7Hit_factory.h  faWaveboardHit.cc  faWaveboardHit_factory.cc
services/ftcal_trigger_service/main/FT/: FTCalCluster_factory_km.h  FTCalHit_factory.h  FTHodoHit.cc  FTHodoHit_factory.h
services/ftcal_trigger_service/main/FT/hdbscandir/: AllMetrics.h  Hdb.h  hdbscanAlgorithm.cc  hdbscanAlgorithm.h  hdbscanRunner.cc  hdbscanRunner.h  hdbscan_main.h  undirectedGraph.cc  undirectedGraph.h  utils.cc  utils.h
services/ftcal_trigger_service/main/TT/: TranslationTable_factory.cc  TranslationTable_factory.h
services/ftcal_trigger_service/main/system/: JObjectDrawable.cc  JObjectDrawable.h
services/ftcal_trigger_service/test/: CMakeLists.txt  ftcal_trigger_service_tests.cc
services/sampa/main/cpp/: CMakeLists.txt  sampa_service.cpp
services/sampa/test/cpp/: sampa_service_test_fixtures.hpp  sampa_service_tests.cc
services/src/main/cpp/: CMakeLists.txt  ersap_event_group.hpp  ersap_event_processor.hpp  ersap_event_source.cpp  ersap_event_source.hpp  group_event_processor.cpp  group_event_processor.hpp  jana_service.cpp  jana_service.hpp  sampa_calib_factory.cpp  sampa_calib_factory.hpp  sampa_output_type.hpp  sampa_service.cpp  sampa_service.hpp  sampa_test_factory.cpp  sampa_test_factory.hpp
services/src/test/cpp/: CMakeLists.txt  sampa_service_tests.cc
